--- a/src/app/addaccount/addaccount.component.html
+++ b/src/app/addaccount/addaccount.component.html
@@ -119,7 +119,7 @@
                     required=""
                   >
                     <option value="">- Select Your A/c. Type -</option>
-                    <option value="Agent">{{member}}</option>
+                    <option value="Agent">{{member.name}}</option>
                     <option value="User">User</option>
                   </select>
                   <span id="accounttype-error" class="error"></span>
