--- a/src/app/active-users/active-users.component.html
+++ b/src/app/active-users/active-users.component.html
@@ -87,7 +87,7 @@
                             <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap" (click)="userDipo(user.userName,user.userId);selectTxType(user, 1,user.userId)">D</button>
                             <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap" (click)="userDipo(user.userName,user.userId);selectTxType(user, 2,user.userId)">W</button>
                             <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#ex-limit" data-bs-whatever="@getbootstrap" (click)="getuserid(user.userId)">L</button>
-                            <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#credit" data-bs-whatever="@getbootstrap">C</button>
+                            <!-- <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#credit" data-bs-whatever="@getbootstrap">C</button> -->
                             <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#password" data-bs-whatever="@getbootstrap" (click)="getuserid(user.userId)">P</button>
                             <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#status" data-bs-whatever="@getbootstrap"  (click)="openChangeStatusModal(user)">S</button>
                             <button type="button" class="btn-pop btn-primary" data-bs-toggle="modal" data-bs-target="#Casinodetails" data-bs-whatever="@getbootstrap">MORE</button>
@@ -358,7 +358,7 @@
     </div> -->
 
 
-    <!-- <div class="modal fade" id="password" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+     <div class="modal fade" id="password" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
 
@@ -368,14 +368,14 @@
                 </div>
 
                 <div class="modal-body">
-                    <form [formGroup]="changePassForm" (ngSubmit)="changePass()">
+                    <form [formGroup]="" (ngSubmit)="changePass()">
                         <div class="container-fluid">
                           <div class="row m-b-20">
                             <div class="col-md-4">
                               <label>New Password</label>
                             </div>
                             <div class="col-md-8">
-                              <input type="Password" formControlName="newpassword" class="" id="new-password" required="" maxlength="20"  />
+                              <input type="Password"     formControlName="newpassword" class="" id="new-password" required="" maxlength="20"  />
                               <span class="error">
                                 <div
                                 class="errors"
@@ -473,7 +473,7 @@
 
             </div>
         </div>
-    </div> -->
+    </div> 
 
 
     <div class="modal fade" id="status" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
